# stm32-ota-freertos_light_contorl

./: .clang-format  .gitignore  .mxproject  99-stlink.rules  BUGS.md  CMakeLists.txt  LICENSE  README.md  STM32F103XX_FLASH.ld  compile_commands.json  flash.sh  gcctest.ioc  ota_upload.py
Core/Inc/: FreeRTOSConfig.h  MPU6050.h  main.h  oled.h  ota.h  stm32f1xx_it.h  w25d64.h
Core/Src/: MPU6050.c  adc.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  oled.c  ota.c  spi.c  stm32f1xx_it.c  tim.c  usart.c  w25d64.c
bootloader/: CMakeLists.txt  linker.ld
bootloader/Src/: main.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
tools/: ota_upload.py
